tests/fixtures/errors/bare_generic_template.z
# E0300: a generic template needs type arguments before it constructs.
main: function is {
    xs: List
    print "\{xs.length}"
}
